# fogpy

./: .gitignore  .travis.yml  AUTHORS.md  MANIFEST.in  README.rst  setup.cfg  setup.py
.github/workflows/: ci.yaml
continuous_integration/: environment.yaml
doc/: Makefile
doc/source/: algorithms.rst  conf.py  filters.rst  index.rst  install.rst  lowcloud.rst  quickstart.rst
etc/: elevation_1km.npy  fog_testdata.npy  fog_testdata_fogmask.npy  fog_testdata_hrv.npy  result_20131112.bufr  result_20131112_swis.bufr  seviri.yaml
etc/composites/: seviri.yaml
etc/enhancements/: generic.yaml
fogpy/: __init__.py  algorithms.py  composites.py  filters.py  fogpy.py  fogpy_old.py  lowwatercloud.py  version.py
fogpy/data/DEM/: .gitignore  README
fogpy/etc/: result_20131112_metar.bufr  result_20140827.bufr  testarea.txt
fogpy/etc/composites/: abi.yaml  seviri.yaml
fogpy/test/: __init__.py  conftest.py  test_algorithms.py  test_composites.py  test_filters.py  test_fogpy.py  test_lowwatercloud.py  test_utils.py
fogpy/utils/: __init__.py  add_synop.py  export_synop.py  import_synop.py  reproj_testdata.py
utils/: __init__.py  add_synop.py  import_synop.py  reproj_testdata.py
