[metadata]
name = fogpy
description = Satellite based fog and low stratus detection and nowcasting
license = GNU general public license version 3
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python
    Development Status :: 4 - Beta
    Natural Language :: English
    Environment :: Web Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
url = https://github.com/pytroll/fogpy
author = Thomas Leppelt, Gerrit Holl
maintainer = Gerrit Holl
author_email = gerrit.holl@dwd.de
platforms = any

[options]
packages = find:
include_package_data = True
install_requires = 
    numpy
    scipy
    matplotlib
    pyorbital
    trollimage
    satpy
    pyresample
    opencv-python
    opencv-contrib-python
    trollbufr
    appdirs
    requests
python_requires = >=3.7
tests_require = 

[options.package_data]
fogpy = 
    etc
    etc/composites/*.yaml
    etc/enhancements/*.yaml

[flake8]
max-line-length = 120

[coverage:run]
omit =
    fogpy/version.py
